<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/create_cryptogram"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/create_cryptogram"
        android:onClick="redirectCreateCryptogram"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
    <Button
        android:id="@+id/solve_cryptogram"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/solve_cryptogram"
        android:onClick="redirectCryptogramLibraryList"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
    <Button
        android:id="@+id/view_cryptogram_stats"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="226dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/view_cryptogram_stats"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:onClick="redirectCryptogramLibraryStatistics"/>
    <Button
        android:id="@+id/view_completed_cryptograms"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="316dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:onClick="redirectViewCompletedCryptograms"
        android:text="@string/view_completed_cryptograms"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
    <Button
        android:id="@+id/logout"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="406dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:onClick="redirectStartScreen"
        android:text="@string/logout"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</RelativeLayout>