<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateCryptogramActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/puzzleNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_cryptogram_name_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/puzzleNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/maxAttemptsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_cryptogram_max_attempts_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/maxAttemptsEdit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/solutionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_cryptogram_solution_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/solutionEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/createCipherView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/maxAttemptsEdit"
        android:orientation="vertical">

    </LinearLayout>

    <TextView
        android:id="@+id/createEncodedView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textStyle="bold" />

    <Button
        android:id="@+id/viewEncodedSolutionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:onClick="onViewEncodedClick"
        android:text="@string/create_cryptogram_view_encoded_solution"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDisabled"
        android:enabled="false"
        android:onClick="onContinueClick"
        android:text="@string/create_cryptogram_continue"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
</LinearLayout>