<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity">

    <!-- Registration progress -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/firstname_tv"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:text="@string/prompt_first_name"
            android:gravity="center_vertical"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <EditText
            android:id="@+id/firstname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_first_name"
            android:inputType="text"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:maxLength="24"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/lastname_tv"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:text="@string/prompt_last_name"
            android:gravity="center_vertical"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <EditText
            android:id="@+id/lastname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_last_name"
            android:inputType="text"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:maxLength="24"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/email_tv"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:text="@string/prompt_email"
            android:gravity="center_vertical"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:maxLength="24"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/username_tv"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:gravity="center_vertical"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:maxLength="24"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/password_tv"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:text="@string/prompt_password_registration"
            android:gravity="center_vertical"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password_registration"
            android:inputType="textPassword"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:maxLength="24"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/user_register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_submit"
            android:background="@android:color/holo_blue_dark"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:onClick="createPlayer" />

    </LinearLayout>

</LinearLayout>